# programesana-majas-darbi

./: .gitignore
1. semestris/AK_IT-P-Ns_AntonsCvetkovs_5md/: README.md  const.h  functions.h  menu-input.h
2. semestris/AK_IT-P-Ns_AntonsCvetkovs_1md/: Character.cpp  Character.h  main.cpp
2. semestris/AK_IT-P-Ns_AntonsCvetkovs_4md/: BraucienuskET.h  BraucienuskETh.cpp  CMakeLists.txt  DiennaktsET.h  Helpers.h  Helpersh.cpp  PersoniskaisET.h  eTalons.h  eTalonsh.cpp  main.cpp
3. semestris/AK_IT-P-Ns-2_AntonsCvetkovs_2md/: 1uzd.sln  2un3uzd.sln
3. semestris/AK_IT-P-Ns-2_AntonsCvetkovs_3md/: AK_IT-P-Ns-2_AntonsCvetkovs-3md.sln  AK_IT-P-Ns-2_AntonsCvetkovs_3md.sln  Clients.csv  Gym.csv  IT-P-Ns-2_Antons_Cvetkovs_4md.docx  Sport.csv  create_database_structure.sql
3. semestris/AK_IT-P-Ns-2_AntonsCvetkovs_4md/: AK_IT-P-Ns-2_AntonsCvetkovs_4md.sln
3. semestris/AK_IT-P-Ns_AntonsCvetkovs_1md/: AK_IT-P-Ns_AntonsCvetkovs_1md.sln
AK_IT-P-Ns_AntonsCvetkovs_1md/: (LABOTS) AK_IT-P-Ns_AntonsCvetkovs_1md_3uzd.rar
AK_IT-P-Ns_AntonsCvetkovs_1md/AK_IT-P-Ns_AntonsCvetkovs_1md_1uzd/: main.cpp
AK_IT-P-Ns_AntonsCvetkovs_1md/AK_IT-P-Ns_AntonsCvetkovs_1md_2uzd/: main.cpp
AK_IT-P-Ns_AntonsCvetkovs_1md/AK_IT-P-Ns_AntonsCvetkovs_1md_3uzd/: main.cpp
AK_IT-P-Ns_AntonsCvetkovs_2md/: AK_IT-P-Ns_AntonsCvetkovs_2md.sln
AK_IT-P-Ns_AntonsCvetkovs_2md/AK_IT-P-Ns_AntonsCvetkovs_2md/: AK_IT-P-Ns_AntonsCvetkovs_2md.csproj  Form1.Designer.cs  Form1.cs  Program.cs
AK_IT-P-Ns_AntonsCvetkovs_5md/: CMakeLists.txt  main.cpp  structure.h
(+128 files in other folders)
