cmake_minimum_required(VERSION 3.23)
project(AK_IT_P_Ns_AntonsCvetkovs_4md)

set(CMAKE_CXX_STANDARD 23)

add_executable(AK_IT_P_Ns_AntonsCvetkovs_4md main.cpp eTalons.h eTalonsh.cpp DiennaktsET.h DiennaktsETh.cpp BraucienuskET.h BraucienuskETh.cpp PersoniskaisET.h PersoniskaisETh.cpp Helpers.h Helpersh.cpp)
